--- a/app/src/main/res/menu/admin_bottom_menu.xml
+++ b/app/src/main/res/menu/admin_bottom_menu.xml
@@ -2,26 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_dashboard"
-        android:icon="@android:drawable/ic_dialog_info"
+        android:icon="@drawable/ic_dashboard_24"
         android:title="Dashboard" />
 
     <item
         android:id="@+id/nav_users"
-        android:icon="@android:drawable/ic_menu_manage"
+        android:icon="@drawable/ic_people_24"
         android:title="Users" />
 
     <item
-        android:id="@+id/nav_content"
-        android:icon="@android:drawable/ic_menu_edit"
-        android:title="Content" />
+        android:id="@+id/nav_courses"
+        android:icon="@drawable/ic_school_24"
+        android:title="Courses" />
 
     <item
-        android:id="@+id/nav_reports"
-        android:icon="@android:drawable/ic_menu_view"
-        android:title="Reports" />
+        android:id="@+id/nav_analytics"
+        android:icon="@drawable/ic_analytics_24"
+        android:title="Analytics" />
 
     <item
         android:id="@+id/nav_settings"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:icon="@drawable/ic_settings_24"
         android:title="Settings" />
 </menu>
