--- a/app/src/main/res/menu/teacher_bottom_menu.xml
+++ b/app/src/main/res/menu/teacher_bottom_menu.xml
@@ -2,26 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_dashboard"
-        android:icon="@android:drawable/ic_dialog_info"
+        android:icon="@drawable/ic_dashboard_24"
         android:title="Dashboard" />
 
     <item
-        android:id="@+id/nav_courses"
-        android:icon="@android:drawable/ic_menu_agenda"
-        android:title="Courses" />
-
-    <item
         android:id="@+id/nav_content"
-        android:icon="@android:drawable/ic_menu_edit"
+        android:icon="@drawable/ic_book_24"
         android:title="Content" />
 
     <item
+        android:id="@+id/nav_courses"
+        android:icon="@drawable/ic_school_24"
+        android:title="Courses" />
+
+    <item
         android:id="@+id/nav_students"
-        android:icon="@android:drawable/ic_menu_manage"
+        android:icon="@drawable/ic_people_24"
         android:title="Students" />
 
     <item
         android:id="@+id/nav_profile"
-        android:icon="@android:drawable/ic_menu_view"
+        android:icon="@drawable/ic_person_24"
         android:title="Profile" />
 </menu>
