--- a/app/src/main/res/drawable/ic_course_default.xml
+++ b/app/src/main/res/drawable/ic_course_default.xml
@@ -7,6 +7,6 @@
     android:tint="?attr/colorOnSurface">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M19,3H5C3.9,3 3,3.9 3,5v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2V5C21,3.9 20.1,3 19,3zM9,17H7v-7h2V17zM13,17h-2V7h2V17zM17,17h-2v-4h2V17z"/>
+      android:pathData="M12,2l3.09,6.26L22,9.27l-5,4.87 1.18,6.88L12,17.77l-6.18,3.25L7,14.14 2,9.27l6.91,-1.01L12,2zM12,15.4l3.76,2.27 -1,-4.28 3.32,-2.88 -4.38,-0.38L12,6.1l-1.71,4.04 -4.38,0.38 3.32,2.88 -1,4.28L12,15.4z"/>
 </vector>
 
